# NeoStats-yatzeeserv

./: .gitattributes  ChangeLog  LICENSE  Makefile.am  Makefile.in  README.YahtzeeServ  README.YahtzeeServ.html  README.YahtzeeServ.xml  RELNOTES  RELNOTES.win32.txt  aclocal.m4  channel.c  configure  configure.in  events.c  highscores.c  htmlscores.c  misc.c  modconfig.h.in  modconfigwin32.h  play.c  pulse.xml  yahtzeeserv.c  yahtzeeserv.h  yahtzeeserv.sln  yahtzeeserv.vcproj  yahtzeeserv_help.c
html/: ys.tpl
win32/: YahtzeeServ.qsp  buildwin32snap.bat  modconfigwin32.h  neostatsversion.rc
